# cutile-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-NVIDIA  README.md  deny.toml  flake.nix
.github/: copy-pr-bot.yaml
.github/workflows/: cargo-deny.yml  codeql.yml  pages.yml  pr.yml
cuda-async/: Cargo.toml  README.md
cuda-async/src/: cuda_graph.rs  device_box.rs  device_context.rs  device_operation.rs  jit_store.rs  launch.rs  lib.rs  prelude.rs  scheduling_policies.rs
cuda-async/tests/: concurrent_capture.rs  cuda_graph.rs  error_handling.rs  jit_store.rs  pool_allocation.rs
cuda-bindings/: Cargo.toml  README.md  build.rs  wrapper.h
cuda-bindings/src/: dyn_load.rs  lib.rs
cuda-core/: Cargo.toml
cuda-core/src/: api.rs  cudarc_shim.rs  dtype.rs  error.rs  lib.rs  runtime.rs
cuda-core/tests/: borrow_raw.rs
cuda-tile-rs/examples/: build_translate_basic.rs
cutile/: ARCHITECTURE.md  Cargo.toml
cutile-benchmarks/: Cargo.toml
cutile-benchmarks/benches/: execution_lock.rs  fmha.rs  fmha_causal.rs  gemm.rs  launch_overhead.rs  rmsnorm.rs  softmax.rs
cutile-benchmarks/paper/: README.md
cutile-book/: README.md  conf.py  index.md  requirements.txt
cutile-book/appendix/: syntax-reference.md
cutile-book/guide/: async-execution.md  data-model.md  debugging.md  (+13 more)
cutile-compiler/: Cargo.toml  README.md
cutile-examples/: Cargo.toml  README.md
cutile-ir/: README.md
cutile-macro/: Cargo.toml  README.md
scripts/: build_versioned_book.sh  run_all.sh  run_benchmarks.sh  run_book.sh  run_cpu_tests.sh  run_examples.sh  run_gpu_tests.sh
(+156 files in other folders)
