[package]
name = "cuda-async"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Safe Async CUDA support via Async Rust."

[dependencies]
cuda-core = { workspace = true }
half = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
once_cell = { workspace = true }
