[package]
name = "cuda-bindings"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "NVIDIA CUDA bindings."
readme = "README.md"
license-file = "../LICENSE-NVIDIA"
repository.workspace = true

[lib]
doctest = false

[dependencies]
libloading = { workspace = true }

[build-dependencies]
bindgen = "0.69.4"
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
