[package]
name = "cuda-core"
description = "Idiomatic CUDA API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
cuda-bindings = { workspace = true }
anyhow = { workspace = true }
half = { workspace = true }
